# tree-sitter-gel

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file  go.mod  grammar.js  output.txt  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-gel.pc.in
bindings/c/tree_sitter/: tree-sitter-gel.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gel/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGelTests/: TreeSitterGelTests.swift
src/: grammar.json  node-types.json  parser.c
